--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".main.SearchActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_league_list">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        tools:listitem="@layout/item_match_list" />
 
     <FrameLayout
         android:id="@+id/loading_overlay"
@@ -35,6 +34,4 @@
             android:max="100"
             android:progress="0" />
     </FrameLayout>
-
-
 </FrameLayout>
