--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -9,7 +9,7 @@
     tools:context=".main.league.LeagueDetailFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_category"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorAccent"
@@ -42,6 +42,33 @@
             android:layout_gravity="center"
             android:max="100"
             android:progress="0" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/text_overlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#CD000000"
+            android:clickable="true"
+            android:focusable="true" />
+
+        <TextView
+            android:id="@+id/tv_nodata"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:backgroundTint="#FFFFFF"
+            android:gravity="center"
+            android:text="Tidak ada data"
+            android:textColor="#FFFFFF"
+            app:autoSizeTextType="uniform" />
+
     </FrameLayout>
 
     <!--    <TextView-->
