--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -23,9 +23,10 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
+                android:layout_height="300dp"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:paddingBottom="32dp"
+                android:paddingTop="?actionBarSize"
+                android:paddingBottom="?actionBarSize"
                 android:orientation="horizontal"
                 app:layout_collapseMode="parallax">
 
@@ -36,7 +37,7 @@
                     android:layout_height="match_parent"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
-                    android:paddingBottom="?actionBarSize"
+
                     android:src="@drawable/english_premier_league_1" />
 
                 <LinearLayout
