--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -62,7 +62,8 @@
             android:id="@+id/tv_nodata"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="center"
+            android:layout_gravity="top"
+            android:layout_marginTop="60dp"
             android:backgroundTint="#FFFFFF"
             android:gravity="center"
             android:text="Tidak ada data"
