--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -24,6 +24,7 @@
         android:text="12:12:10 AM"
         app:layout_constraintBottom_toBottomOf="@+id/tv_round"
         app:layout_constraintEnd_toStartOf="@+id/tv_round"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_round" />
 
@@ -34,14 +35,16 @@
         android:text="12/06/2019"
         app:layout_constraintBottom_toBottomOf="@+id/tv_round"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toEndOf="@+id/tv_round"
-        app:layout_constraintTop_toTopOf="@+id/tv_round" />
+        app:layout_constraintTop_toTopOf="@+id/tv_round"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tv_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:gravity="center"
         android:text="Round 10"
         app:layout_constraintEnd_toEndOf="@+id/textView6"
@@ -230,5 +233,30 @@
             android:max="100"
             android:progress="0" />
     </FrameLayout>
+
+    <ImageView
+        android:id="@+id/iv_badge"
+        android:layout_width="94dp"
+        android:layout_height="94dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_score"
+        app:layout_constraintEnd_toStartOf="@+id/tv_score"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_score"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:id="@+id/iv_badge2"
+        android:layout_width="94dp"
+        android:layout_height="94dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_score2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_score2"
+        app:layout_constraintTop_toTopOf="@+id/tv_score2"
+        app:layout_constraintVertical_bias="0.461"
+        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
