--- a/app/src/main/res/layout/item_match_list.xml
+++ b/app/src/main/res/layout/item_match_list.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="16dp"
@@ -23,7 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Leguna Vs Makana"
+            tools:text="Leguna Vs Makana"
             android:textSize="18sp"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintHorizontal_bias="0.0"
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="110dp"
-            android:text="0"
+            tools:text="0"
             android:textSize="36sp"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView3"
             card_view:layout_constraintEnd_toStartOf="@+id/textView3"
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="110dp"
-            android:text="0"
+            tools:text="0"
             android:textSize="36sp"
             card_view:layout_constraintBottom_toBottomOf="@+id/textView3"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -62,14 +62,15 @@
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            card_view:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/tv_round"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="13 Round"
+            tools:text="13 Round"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="@+id/textView3"
             card_view:layout_constraintStart_toStartOf="@+id/textView3"
@@ -80,7 +81,7 @@
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2019-10-01"
+            tools:text="2019-10-01"
             card_view:layout_constraintBottom_toBottomOf="@+id/tv_round"
             card_view:layout_constraintEnd_toStartOf="@+id/tv_round"
             card_view:layout_constraintHorizontal_bias="0.449"
@@ -91,7 +92,7 @@
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="13:12:10 AM"
+            tools:text="13:12:10 AM"
             card_view:layout_constraintBottom_toBottomOf="@+id/tv_round"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/tv_round"
@@ -107,6 +108,7 @@
             card_view:layout_constraintHorizontal_bias="1.0"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="@+id/tv_score"
+            android:contentDescription="@string/home_team"
             tools:srcCompat="@tools:sample/avatars" />
 
         <ImageView
@@ -119,6 +121,7 @@
             card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toEndOf="@+id/tv_score2"
             card_view:layout_constraintTop_toTopOf="@+id/tv_score2"
+            android:contentDescription="@string/away_team"
             tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
