--- a/app/src/main/res/layout/item_league_list.xml
+++ b/app/src/main/res/layout/item_league_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item"
     android:layout_width="match_parent"
@@ -35,7 +34,7 @@
             android:layout_height="wrap_content"
             android:maxLines="5"
             android:paddingTop="8dp"
-            android:text="desc asdlakjsd lasdkjas" />
+            android:text="@string/desc_example" />
     </LinearLayout>
 
 </LinearLayout>
